update to sakhi version

--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>CodingExercise1</title>
+    <meta name="description" content="This is Sakhi's Website">
+    <title>Sakhi's Website</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>HTML Challenge</h1>
-    <hr>
-    <h4><a href="https://developer.mozilla.org/en-US/">Link to MDN</a></h4>
-    <table>
-      <tr>
-        <td>One</td>
-        <td>Two</td>
-        <br>
-      </tr>
-      <tr>
-        <td>Three</td>
-        <td>Four</td>
+    <table cellspacing="25">
+      <tr><td>
+        <img src="https://scontent.frpr2-1.fna.fbcdn.net/v/t1.6435-9/45721209_1768749813252564_7623343148244140032_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=4kDjvI51VpAAX-v2z35&_nc_ht=scontent.frpr2-1.fna&oh=00_AT854zoY4ujYL08VtWawjlyxI44fgFwJH0aFgCSGJ2uQbQ&oe=61FFB330" alt="">
+        </td>
+        <td><h1>Hi! My name is <em>A Sakhilaxmi</em>.</h1></td>
       </tr>
     </table>
+    <p>Hi there! My name is <a href="https://www.facebook.com/allelbhagya">A Bhagyalaxmi</a>, and my petname is <strong>Sakhi.</strong> My hobbies include Reading Books and studying all day. I sleep late and wake up early to study.</p>
+    <hr size="3">
+    <h2>My hobbies</h2>
+    <ul>
+      <li>Reading Books</li>
+      <li>Topping Exams</li>
+      <li>Annoying Vyapak & Himanshu & Dokri & Charul</li>
+    </ul>
+    <h2>My Favourite Books</h2>
+    <ol>
+      <li>All Romantic Books</li>
+      <li>All Romantic Books</li>
+      <li>All Romantic Books</li>
+    </ol>
+    <hr>
+    <h2><a href="C:\Users\vyapa\Documents\webdev\Sites\HTML - First Site\contantus.html">Contact Us</a></h2>
   </body>
 </html>
